# api/quizSwagger.yml
@@ -180,6 +180,41 @@ paths:
                 500:
                     $ref: "#/responses/InternalError"
 
+    /quizzes/{quizId}/attempts/{attemptId}:
+        parameters:
+            - type: integer
+              name: quizId
+              in: path
+              description: quizId
+              format: int64
+              required: true
+            - type: integer
+              name: attemptId
+              in: path
+              description: attemptId
+              format: int64
+              required: true
+        put:
+            tags:
+                - attempt
+            operationId: updateAttempt
+            parameters:
+                - name: attemptDTO
+                  in: body
+                  schema:
+                      $ref: "#/definitions/attemptDTO"
+            responses:
+                  200:
+                      description: update attempt
+                      schema:
+                          $ref: "#/definitions/attemptDTO"
+                  400:
+                      $ref: "#/responses/BadRequest"
+                  401:
+                      $ref: "#/responses/Unauthorized"
+                  500:
+                      $ref: "#/responses/InternalError"
+
     /quizzes/{quizId}/attempts/{attemptId}/answers:
         parameters:
             - type: integer
