# cmd/quiz/main.go
@@ -88,6 +88,7 @@ func main() {
 	swaggerAPI.DeleteAnswerHandler = squiz.DeleteAnswerHandlerFunc(answerHandler.DeleteAnswer)
 
 	swaggerAPI.AddAttemptHandler = squiz.AddAttemptHandlerFunc(attemptHandler.AddAttempt)
+	swaggerAPI.UpdateAttemptHandler = squiz.UpdateAttemptHandlerFunc(attemptHandler.UpdateAttempt)
 	swaggerAPI.AddAttemptAnswerHandler = squiz.AddAttemptAnswerHandlerFunc(attemptHandler.AddAttemptAnswer)
 	if err := server.Serve(); err != nil {
 		log.Fatalln(err)
